[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/8-bit-operator/8bitOperatorPlus8-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Buttons/ButtonPressed.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/Buttons/ButtonNormal.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/Buttons/ButtonHover.tres" type="StyleBox" id=4]
[ext_resource path="res://Scripts/LevelSelecter.gd" type="Script" id=5]
[ext_resource path="res://Fonts/8-bit-operator/8bitOperatorPlusSC-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Random Images/Blue Background.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="LevelSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="BlueBackground" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1.01386, 1.0274 )
texture = ExtResource( 8 )

[node name="Level1" type="Button" parent="."]
margin_left = 128.0
margin_top = 192.0
margin_right = 256.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "1"

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 3 )
text = "Levels"
align = 1
valign = 1

[connection signal="pressed" from="Level1" to="." method="_on_PlayButton_pressed"]
